Update README.md
Added instructions per OS specific platform on how to run the examples included